[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nice-server-api"
version = "0.1.0"
authors = [
  { name = "Твое_Имя", email = "твой_email@example.com" }
]
description = "Библиотека для упрощения работы с серверной (Flask) и клиентской (requests) частями API"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
  "flask>=2.0.0",
  "requests>=2.25.0"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/твой_пользователь/nice-server-api"
"Bug Tracker" = "https://github.com/твой_пользователь/nice-server-api/issues"